overflow and empty task add fixes

--- a/src/components/Container.css
+++ b/src/components/Container.css
@@ -1,8 +1,9 @@
 .container {
   background-color: white;
-  height: 80%;
+  height: 82%;
   width: 60vw;
   border-radius: 8px;
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.25);
   display: flex;
+  overflow: scroll;
 }
